# irrlicht-android

./: .gitignore  settings.gradle
app/: build.gradle
app/src/androidTest/java/vell/bibi/irrlicht_demo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/irrlicht_media/: arrow.dae  spline.psd
app/src/main/assets/media/: arrow.fbx
app/src/main/cpp/: CMakeLists.txt  SplineNode.hpp  SplineUtils.h  TessNode.hpp  native-activity.cpp  native-lib.cpp
app/src/main/cpp/Irrlicht/include/: IColladaMeshWriter.h  IReadFile.h  IrrCompileConfig.h  SViewFrustum.h  irrString.h
app/src/main/cpp/IrrlichtAndroid/: VAndroidAssetFileArchive.cpp  VAndroidAssetReader.cpp  VIrrDeviceAndroid.cpp
app/src/main/cpp/libtess2/: CMakeLists.txt
app/src/main/cpp/libtess2/Source/: tess.c  tess.h
app/src/main/java/vell/bibi/irrlicht_demo/: Irrlicht.java  MainActivity.java  SurfaceAct.java
app/src/main/res/layout/: surface_act.xml
app/src/main/res/values/: strings.xml
app/src/test/java/vell/bibi/irrlicht_demo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
irrlicht_android/: build.gradle
irrlicht_android/src/androidTest/java/com/vell/irrlicht_android/: ExampleInstrumentedTest.java
irrlicht_android/src/main/: AndroidManifest.xml
irrlicht_android/src/main/cpp/: CMakeLists.txt
irrlicht_android/src/main/cpp/include/: S3DVertex.h  SColor.h  SIrrCreationParameters.h
irrlicht_android/src/main/cpp/src/: CB3DMeshWriter.cpp  CBillboardSceneNode.cpp  CColladaFileLoader.cpp  CColladaFileLoader.h  CColladaMeshWriter.cpp  CColladaMeshWriter.h  CFileSystem.cpp  CLimitReadFile.h  CLogger.cpp  CMemoryFile.h  CMeshSceneNode.cpp  CNullDriver.cpp  CNullDriver.h  COGLES2Driver.cpp  COGLES2Driver.h  COGLESDriver.cpp  COGLESDriver.h  COctreeSceneNode.cpp  COpenGLSLMaterialRenderer.cpp  CQuake3ShaderSceneNode.cpp  CReadFile.h  CSceneManager.cpp  CSphereSceneNode.cpp  CTerrainSceneNode.cpp  CTerrainTriangleSelector.cpp
irrlicht_android/src/main/cpp/src/Android/: CIrrDeviceAndroid.cpp
irrlicht_android/src/main/cpp/src/Android/jni/: Application.mk
irrlicht_android/src/main/cpp/src/Android/native_app_glue/: android_native_app_glue.c
irrlicht_android/src/main/res/values/: strings.xml
irrlicht_android/src/test/java/com/vell/irrlicht_android/: ExampleUnitTest.java
