cmake_minimum_required(VERSION 3.4.1)

include_directories(include)
include_directories(src
        src/zlib
        src/jpeglib
        src/libpng
        src/aesGladman
        src/bzip2
        src/lzma
        src/Android/native_app_glue
        )


add_library(
        Irrlicht
        SHARED
        src/Android/native_app_glue/android_native_app_glue.c
        src/Android/CIrrDeviceAndroid.cpp
        src/Android/CAndroidAssetReader.cpp
        src/Android/CAndroidAssetFileArchive.cpp
        src/Android/CKeyEventWrapper.cpp
        src/aesGladman/aescrypt.cpp
        src/aesGladman/aeskey.cpp
        src/aesGladman/aestab.cpp
        src/aesGladman/fileenc.cpp
        src/aesGladman/hmac.cpp
        src/aesGladman/prng.cpp
        src/aesGladman/pwd2key.cpp
        src/aesGladman/sha1.cpp
        src/aesGladman/sha2.cpp
        src/C3DSMeshFileLoader.cpp
        src/CAnimatedMeshHalfLife.cpp
        src/CAnimatedMeshMD2.cpp
        src/CAnimatedMeshMD3.cpp
        src/CAnimatedMeshSceneNode.cpp
        src/CAttributes.cpp
        src/CB3DMeshFileLoader.cpp
        src/CB3DMeshWriter.cpp
        src/CBillboardSceneNode.cpp
        src/CBoneSceneNode.cpp
        src/CBSPMeshFileLoader.cpp
        src/CBurningShader_Raster_Reference.cpp
        src/CCameraSceneNode.cpp
        src/CColladaFileLoader.cpp
        src/CColladaMeshWriter.cpp
        src/CColorConverter.cpp
        src/CCSMLoader.cpp
        src/CCubeSceneNode.cpp
        src/CD3D9Driver.cpp
        src/CD3D9HLSLMaterialRenderer.cpp
        src/CD3D9NormalMapRenderer.cpp
        src/CD3D9ParallaxMapRenderer.cpp
        src/CD3D9ShaderMaterialRenderer.cpp
        src/CD3D9Texture.cpp
        src/CDefaultGUIElementFactory.cpp
        src/CDefaultSceneNodeAnimatorFactory.cpp
        src/CDefaultSceneNodeFactory.cpp
        src/CDepthBuffer.cpp
        src/CDMFLoader.cpp
        src/CDummyTransformationSceneNode.cpp
        src/CEmptySceneNode.cpp
        src/CFileList.cpp
        src/CFileSystem.cpp
        src/CFPSCounter.cpp
        src/leakHunter.cpp
        src/CGeometryCreator.cpp
        src/CGUIButton.cpp
        src/CGUICheckBox.cpp
        src/CGUIColorSelectDialog.cpp
        src/CGUIComboBox.cpp
        src/CGUIContextMenu.cpp
        src/CGUIEditBox.cpp
        src/CGUIEnvironment.cpp
        src/CGUIFileOpenDialog.cpp
        src/CGUIFont.cpp
        src/CGUIImage.cpp
        src/CGUIImageList.cpp
        src/CGUIInOutFader.cpp
        src/CGUIListBox.cpp
        src/CGUIMenu.cpp
        src/CGUIMeshViewer.cpp
        src/CGUIMessageBox.cpp
        src/CGUIModalScreen.cpp
        src/CGUIScrollBar.cpp
        src/CGUISkin.cpp
        src/CGUISpinBox.cpp
        src/CGUISpriteBank.cpp
        src/CGUIStaticText.cpp
        src/CGUITabControl.cpp
        src/CGUITable.cpp
        src/CGUIToolBar.cpp
        src/CGUITreeView.cpp
        src/CGUIWindow.cpp
        src/CGUIProfiler.cpp
        src/CImage.cpp
        src/CImageLoaderBMP.cpp
        src/CImageLoaderDDS.cpp
        src/CImageLoaderJPG.cpp
        src/CImageLoaderPCX.cpp
        src/CImageLoaderPNG.cpp
        src/CImageLoaderPPM.cpp
        src/CImageLoaderPSD.cpp
        src/CImageLoaderRGB.cpp
        src/CImageLoaderTGA.cpp
        src/CImageLoaderWAL.cpp
        src/CImageWriterBMP.cpp
        src/CImageWriterJPG.cpp
        src/CImageWriterPCX.cpp
        src/CImageWriterPNG.cpp
        src/CImageWriterPPM.cpp
        src/CImageWriterPSD.cpp
        src/CImageWriterTGA.cpp
        src/CImageLoaderPVR.cpp
        src/CIrrDeviceConsole.cpp
        src/CIrrDeviceFB.cpp
        src/CIrrDeviceLinux.cpp
        src/CIrrDeviceSDL.cpp
        src/CIrrDeviceStub.cpp
        src/CIrrDeviceWin32.cpp
        src/CIrrMeshFileLoader.cpp
        src/CIrrMeshWriter.cpp
        src/CLightSceneNode.cpp
        src/CLimitReadFile.cpp
        src/CLMTSMeshFileLoader.cpp
        src/CLogger.cpp
        src/CLWOMeshFileLoader.cpp
        src/CMD2MeshFileLoader.cpp
        src/CMD3MeshFileLoader.cpp
        src/CMemoryFile.cpp
        src/CMeshCache.cpp
        src/CMeshManipulator.cpp
        src/CMeshSceneNode.cpp
        src/CMeshTextureLoader.cpp
        src/CMetaTriangleSelector.cpp
        src/CMountPointReader.cpp
        src/CMS3DMeshFileLoader.cpp
        src/CMY3DMeshFileLoader.cpp
        src/CNPKReader.cpp
        src/CNullDriver.cpp
        src/COBJMeshFileLoader.cpp
        src/COBJMeshWriter.cpp
        src/COCTLoader.cpp
        src/COctreeSceneNode.cpp
        src/COctreeTriangleSelector.cpp
        src/CEGLManager.cpp
        src/COGLES2Driver.cpp
        src/COGLES2ExtensionHandler.cpp
        src/COGLES2MaterialRenderer.cpp
        src/COGLES2FixedPipelineRenderer.cpp
        src/COGLES2NormalMapRenderer.cpp
        src/COGLES2ParallaxMapRenderer.cpp
        src/COGLES2Renderer2D.cpp
        src/COGLESDriver.cpp
        src/COGLESExtensionHandler.cpp
        src/COgreMeshFileLoader.cpp
        src/COpenGLCacheHandler.cpp
        src/COpenGLDriver.cpp
        src/COpenGLExtensionHandler.cpp
        src/COpenGLNormalMapRenderer.cpp
        src/COpenGLParallaxMapRenderer.cpp
        src/COpenGLShaderMaterialRenderer.cpp
        src/COpenGLSLMaterialRenderer.cpp
        src/COSOperator.cpp
        src/CPakReader.cpp
        src/CParticleAnimatedMeshSceneNodeEmitter.cpp
        src/CParticleAttractionAffector.cpp
        src/CParticleBoxEmitter.cpp
        src/CParticleCylinderEmitter.cpp
        src/CParticleFadeOutAffector.cpp
        src/CParticleGravityAffector.cpp
        src/CParticleMeshEmitter.cpp
        src/CParticlePointEmitter.cpp
        src/CParticleRingEmitter.cpp
        src/CParticleRotationAffector.cpp
        src/CParticleScaleAffector.cpp
        src/CParticleSphereEmitter.cpp
        src/CParticleSystemSceneNode.cpp
        src/CPLYMeshFileLoader.cpp
        src/CPLYMeshWriter.cpp
        src/CProfiler.cpp
        src/CQ3LevelMesh.cpp
        src/CQuake3ShaderSceneNode.cpp
        src/CReadFile.cpp
        src/CSceneCollisionManager.cpp
        src/CSceneLoaderIrr.cpp
        src/CSceneManager.cpp
        src/CSceneNodeAnimatorCameraFPS.cpp
        src/CSceneNodeAnimatorCameraMaya.cpp
        src/CSceneNodeAnimatorCollisionResponse.cpp
        src/CSceneNodeAnimatorDelete.cpp
        src/CSceneNodeAnimatorFlyCircle.cpp
        src/CSceneNodeAnimatorFlyStraight.cpp
        src/CSceneNodeAnimatorFollowSpline.cpp
        src/CSceneNodeAnimatorRotation.cpp
        src/CSceneNodeAnimatorTexture.cpp
        src/CShadowVolumeSceneNode.cpp
        src/CSkinnedMesh.cpp
        src/CSkyBoxSceneNode.cpp
        src/CSkyDomeSceneNode.cpp
        src/CSMFMeshFileLoader.cpp
        src/CSoftwareDriver.cpp
        src/CSoftwareDriver2.cpp
        src/CSoftwareTexture.cpp
        src/CSoftwareTexture2.cpp
        src/CSphereSceneNode.cpp
        src/CSTLMeshFileLoader.cpp
        src/CSTLMeshWriter.cpp
        src/CTarReader.cpp
        src/CTerrainSceneNode.cpp
        src/CTerrainTriangleSelector.cpp
        src/CTextSceneNode.cpp
        src/CTRFlat.cpp
        src/CTRFlatWire.cpp
        src/CTRGouraud.cpp
        src/CTRGouraud2.cpp
        src/CTRGouraudAlpha2.cpp
        src/CTRGouraudAlphaNoZ2.cpp
        src/CTRGouraudWire.cpp
        src/CTriangleBBSelector.cpp
        src/CTriangleSelector.cpp
        src/CTRNormalMap.cpp
        src/CTRStencilShadow.cpp
        src/CTRTextureBlend.cpp
        src/CTRTextureDetailMap2.cpp
        src/CTRTextureFlat.cpp
        src/CTRTextureFlatWire.cpp
        src/CTRTextureGouraud.cpp
        src/CTRTextureGouraud2.cpp
        src/CTRTextureGouraudAdd.cpp
        src/CTRTextureGouraudAdd2.cpp
        src/CTRTextureGouraudAddNoZ2.cpp
        src/CTRTextureGouraudAlpha.cpp
        src/CTRTextureGouraudAlphaNoZ.cpp
        src/CTRTextureGouraudNoZ.cpp
        src/CTRTextureGouraudNoZ2.cpp
        src/CTRTextureGouraudVertexAlpha2.cpp
        src/CTRTextureGouraudWire.cpp
        src/CTRTextureLightMap2_Add.cpp
        src/CTRTextureLightMap2_M1.cpp
        src/CTRTextureLightMap2_M2.cpp
        src/CTRTextureLightMap2_M4.cpp
        src/CTRTextureLightMapGouraud2_M4.cpp
        src/CTRTextureWire2.cpp
        src/CVideoModeList.cpp
        src/CVolumeLightSceneNode.cpp
        src/CWADReader.cpp
        src/CWaterSurfaceSceneNode.cpp
        src/CWriteFile.cpp
        src/CXMeshFileLoader.cpp
        src/CXMLReader.cpp
        src/CXMLWriter.cpp
        src/CZBuffer.cpp
        src/CZipReader.cpp
        src/IBurningShader.cpp
        src/Irrlicht.cpp
        src/irrXML.cpp
        src/os.cpp
        src/bzip2/blocksort.c
        src/bzip2/bzcompress.c
        src/bzip2/bzlib.c
        src/bzip2/crctable.c
        src/bzip2/decompress.c
        src/bzip2/huffman.c
        src/bzip2/randtable.c
        src/jpeglib/jaricom.c
        src/jpeglib/jcapimin.c
        src/jpeglib/jcapistd.c
        src/jpeglib/jcarith.c
        src/jpeglib/jccoefct.c
        src/jpeglib/jccolor.c
        src/jpeglib/jcdctmgr.c
        src/jpeglib/jchuff.c
        src/jpeglib/jcinit.c
        src/jpeglib/jcmainct.c
        src/jpeglib/jcmarker.c
        src/jpeglib/jcmaster.c
        src/jpeglib/jcomapi.c
        src/jpeglib/jcparam.c
        src/jpeglib/jcprepct.c
        src/jpeglib/jcsample.c
        src/jpeglib/jctrans.c
        src/jpeglib/jdapimin.c
        src/jpeglib/jdapistd.c
        src/jpeglib/jdarith.c
        src/jpeglib/jdatadst.c
        src/jpeglib/jdatasrc.c
        src/jpeglib/jdcoefct.c
        src/jpeglib/jdcolor.c
        src/jpeglib/jddctmgr.c
        src/jpeglib/jdhuff.c
        src/jpeglib/jdinput.c
        src/jpeglib/jdmainct.c
        src/jpeglib/jdmarker.c
        src/jpeglib/jdmaster.c
        src/jpeglib/jdmerge.c
        src/jpeglib/jdpostct.c
        src/jpeglib/jdsample.c
        src/jpeglib/jdtrans.c
        src/jpeglib/jerror.c
        src/jpeglib/jfdctflt.c
        src/jpeglib/jfdctfst.c
        src/jpeglib/jfdctint.c
        src/jpeglib/jidctflt.c
        src/jpeglib/jidctfst.c
        src/jpeglib/jidctint.c
        src/jpeglib/jmemmgr.c
        src/jpeglib/jmemnobs.c
        src/jpeglib/jquant1.c
        src/jpeglib/jquant2.c
        src/jpeglib/jutils.c
        src/libpng/png.c
        src/libpng/pngerror.c
        src/libpng/pngget.c
        src/libpng/pngmem.c
        src/libpng/pngpread.c
        src/libpng/pngread.c
        src/libpng/pngrio.c
        src/libpng/pngrtran.c
        src/libpng/pngrutil.c
        src/libpng/pngset.c
        src/libpng/pngtrans.c
        src/libpng/pngwio.c
        src/libpng/pngwrite.c
        src/libpng/pngwtran.c
        src/libpng/pngwutil.c
        src/lzma/LzmaDec.c
        src/zlib/adler32.c
        src/zlib/crc32.c
        src/zlib/gzclose.c
        src/zlib/gzread.c
        src/zlib/infback.c
        src/zlib/inflate.c
        src/zlib/trees.c
        src/zlib/zutil.c
        src/zlib/compress.c
        src/zlib/deflate.c
        src/zlib/gzlib.c
        src/zlib/gzwrite.c
        src/zlib/inffast.c
        src/zlib/inftrees.c
        src/zlib/uncompr.c
)

find_library(
        log-lib
        log)

target_link_libraries(
        Irrlicht
        ${log-lib}
        android
        EGL
        GLESv1_CM
        GLESv2
)